<resources>
    <string name="app_name">MyStoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_box_hint">Enter your email</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="password_box_hint">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="allready_have_an_account">Allready have an account ?</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account ?</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_story">Add Story</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
</resources>